<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="order"
            type="com.davevarga.giftpoint.models.Order" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="#ffffff"
            android:elevation="@dimen/_1sdp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/toolbar_back"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:rotation="90"
                    android:src="@drawable/ic_arrow"
                    app:tint="#222222" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/p_semibold"
                    android:text="Payment"
                    android:textColor="#333333"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buyNowBtn"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_rounded_10"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/home_screen_featured"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/p_semibold"
                        android:text="Please pay"
                        android:textColor="#444444"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/checkoutSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:background="@drawable/bg_rounded_5"
                        android:backgroundTint="#777777"
                        android:fontFamily="@font/p_semibold"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_1sdp"
                        android:text=""
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_9sdp" />


                </LinearLayout>

                <TextView
                    android:id="@+id/greeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:text="@string/hellooo"
                    android:textAlignment="center"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/paymentmethod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:fontFamily="@font/p_reguler"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/select_payment_method"
                    android:textAlignment="center"
                    android:textColor="#333333"
                    android:textStyle="italic" />


            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:id="@+id/payButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="?attr/actionBarSize"
            android:background="@drawable/bg_rounded_10"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingBottom="@dimen/_10sdp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/p_semibold"
                android:gravity="center"
                android:enabled="true"
                android:text="@string/click_to_pay"
                android:textColor="#ffffff"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

    </RelativeLayout>

</layout>